--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "auth-app",
+  "name": "Auth-App",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0",
-    "jest-expo": "^19.0.0",
-    "react-native-scripts": "1.3.0",
+    "react-native-scripts": "1.3.1",
+    "jest-expo": "~20.0.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,7 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^19.0.0",
+    "expo": "19.0.0",
     "firebase": "^4.3.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0"
