--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "19.0.0",
+    "expo": "19^.0.0",
     "firebase": "^4.3.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0"
